# mgmol

./: CMakeLists.txt
benchmarks/: CMakeLists.txt  MPIp2p.cc  batchFD.cc  batchFDvector.cc
src/: BlockVector.h  ExtendedGridOrbitals.cc  ExtendedGridOrbitals.h  Hamiltonian.cc  LDAonGridSpin.h  LocGridOrbitals.cc  LocGridOrbitals.h  OrbitalsPreconditioning.cc  OrbitalsPreconditioning.h  PBEonGrid.h  Preconditioning.cc  Preconditioning.h
src/pb/: FDoper.cc  FDoper.h  FDoperInterface.h  GridFuncVector.cc  GridFuncVector.h  Lap.cc  Lap.h  Laph2.cc  Laph2.h  Laph4.cc  Laph4.h  Laph4M.cc  Laph4M.h  Laph6.cc  Laph6.h  Laph8.cc  Laph8.h  ShiftedLaph4M.cc  ShiftedLaph4M.h
src/tools/: memory_space.h
tests/: testBatchLaph4.cc  testTradeGhostValues.cc
